--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap');
+
 html, body {
     margin: 0;
     padding: 0;
@@ -9,8 +13,25 @@ html, body {
     margin-left: 100px;
 }
 
+h1 {
+    font-family: 'Outfit', sans-serif;
+    font-size: 60px;
+    font-weight: 400;
+}
+
+h2 {
+    font-family: 'Outfit', sans-serif;
+    color: #D20094;
+}
+
+
+p, li {
+    font-family: 'Inter', sans-serif;
+}
+
 header img {
 width: 8%;
 margin: 40px 0px 60px 0px;
 }
+
 
