--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -31,6 +31,10 @@ p, li, label {
     
 }
 
+.btn {
+    background-color: #00ffff;
+}
+
 header img {
 width: 8%;
 margin: 40px 0px 60px 0px;
@@ -41,5 +45,9 @@ label {
     font-weight: 600;
 }
 
+
+#proceed {
+    display: inline;
+}
 
 
