--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -1,6 +1,7 @@
 
+/* GENERICO*/
 
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Outfit:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&family=Outfit:wght@400;700;900&display=swap');
 
 html, body {
     margin: 0;
@@ -18,6 +19,8 @@ h1 {
     font-family: 'Outfit', sans-serif;
     font-size: 60px;
     font-weight: 400;
+    line-height: 50px;
+
 }
 
 h2 {
@@ -28,17 +31,53 @@ h2 {
 
 p, li, label {
     font-family: 'Inter', sans-serif;
+    font-weight: 300;
     
 }
 
+
 .btn {
     background-color: #00ffff;
+    border: none;
+    box-shadow: 1px 1px 19px 3px #00ffff;
+    height: 42px;
+    width: 140px;
+    font-family: 'Outfit', sans-serif;
+    font-weight: 800;
+    color: #0C113B;
+    margin-left: 180px;
 }
+
+
+
+
+
+
+
+
+
+
+/*MAIN PAGINA 1*/
+
 
 header img {
 width: 8%;
 margin: 40px 0px 60px 0px;
 }
+
+.homePage {
+    width: 25%;
+}
+
+#instructions p {
+width: 40%;
+}
+
+
+#instructions ul {
+    margin: 40px 0px 40px -20px ;
+}
+
 
 label {
     font-size: 12px;
@@ -50,4 +89,40 @@ label {
     display: inline;
 }
 
+
+/* Stile del checkbox */
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"] + label {
+    position: relative;
+    padding-left: 30px; /* Regola la larghezza del checkbox */
+    cursor: pointer;
+    display: inline-block; /* Aggiunto per corretta visualizzazione del margine */
+}
+
+input[type="checkbox"] + label::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 15px; /* Larghezza del perimetro bianco */
+    height: 15px; /* Altezza del perimetro bianco */
+    border: 1px solid #fff; /* Colore del perimetro bianco */
+    background-color: transparent; /* Sfondo trasparente */
+    box-sizing: border-box;
+}
+
+/* Stile del checkmark quando il checkbox è selezionato */
+input[type="checkbox"]:checked + label::before {
+    background-color: transparent; /* Mantieni lo sfondo trasparente quando il checkbox è selezionato */
+    border-color: white; /* Colore del perimetro del segno di spunta */
+    content: '\2713'; /* Codice Unicode del segno di spunta (checkmark) */
+    font-size: 12px; /* Dimensione del testo del segno di spunta */
+    text-align: center; /* Allineamento del testo al centro */
+    color: white; /* Colore del testo del segno di spunta */
+    display: inline-block; /* Per visualizzare correttamente il carattere */
+    line-height: 15px; /* Altezza del contenitore del carattere */
+}
 
