--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -19,7 +19,7 @@ h1 {
     font-family: 'Outfit', sans-serif;
     font-size: 60px;
     font-weight: 400;
-    line-height: 50px;
+    line-height: 48px;
 
 }
 
@@ -71,6 +71,7 @@ margin: 40px 0px 60px 0px;
 
 #instructions p {
 width: 40%;
+margin-top: -10px;
 }
 
 
@@ -87,6 +88,7 @@ label {
 
 #proceed {
     display: inline;
+    margin-top: 100px; 
 }
 
 
