--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -12,7 +12,9 @@ html, body {
 }
 
 #container {
-    margin-left: 100px;
+    margin: 0 auto;
+    
+    width: 60vw;
 }
 
 h1 {
@@ -33,6 +35,7 @@ p, li, label {
     font-family: 'Inter', sans-serif;
     font-weight: 300;
     
+    
 }
 
 
@@ -45,7 +48,7 @@ p, li, label {
     font-family: 'Outfit', sans-serif;
     font-weight: 800;
     color: #0C113B;
-    margin-left: 180px;
+    
 }
 
 
@@ -61,16 +64,16 @@ p, li, label {
 
 
 header img {
-width: 8%;
+width: 14%;
 margin: 40px 0px 60px 0px;
 }
 
 .homePage {
-    width: 25%;
+    width: 40%;
 }
 
 #instructions p {
-width: 40%;
+width: 60%;
 margin-top: -10px;
 }
 
@@ -92,6 +95,12 @@ label {
 #proceed {
     margin-top: 100px;
 }
+
+
+#proceed .btn {
+    margin-left: 180px;
+}
+
 
 
 /* Stile del checkbox */
