--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -18,6 +18,10 @@ header img {
     margin: 40px 0px 60px 0px;
     }
 
+    .main {
+        text-align: center;
+    }
+
 .container {
     margin: 0 auto;
     
