--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -11,7 +11,18 @@ html, body {
     color: white;
 }
 
-#container {
+
+
+header img {
+    width: 14%;
+    margin: 40px 0px 60px 0px;
+    }
+
+    .main {
+        text-align: center;
+    }
+
+.container {
     margin: 0 auto;
     
     width: 60vw;
@@ -50,6 +61,13 @@ p, li, label {
     color: #0C113B;
     
 }
+
+
+
+
+
+
+
 
 
 
