--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -1,183 +1,178 @@
-
 /* GENERICO*/
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&family=Outfit:wght@400;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&family=Outfit:wght@400;700;900&display=swap");
 
-html, body {
-    margin: 0;
-    padding: 0;
-    background-image: url(../img/bg.jpg);
-    background-size: 100%;
-    color: white;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url(../img/bg.jpg);
+  background-size: 100%;
+  color: white;
 }
 
-
-
 header img {
-    width: 14%;
-    margin: 40px 0px 60px 0px;
-    }
+  width: 14%;
+  margin: 40px 0px 60px 0px;
+}
 
-    .main {
-        text-align: center;
-    }
+.main {
+  text-align: center;
+  margin: 0 auto;
+ /* width: 34vw;*/
+}
 
 .container {
-    margin: 0 auto;
-    
-    width: 60vw;
+  margin: 0 auto;
+
+  width: 60vw;
 }
 
 h1 {
-    font-family: 'Outfit', sans-serif;
-    font-size: 60px;
-    font-weight: 400;
-    line-height: 48px;
-
+  font-family: "Outfit", sans-serif;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 48px;
 }
 
 h2 {
-    font-family: 'Outfit', sans-serif;
-    color: #D20094;
+  font-family: "Outfit", sans-serif;
+  color: #d20094;
 }
 
-
-p, li, label {
-    font-family: 'Inter', sans-serif;
-    font-weight: 300;
-    
-    
+p,
+li,
+label {
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
 }
-
 
 .btn {
-    background-color: #00ffff;
-    border: none;
-    box-shadow: 1px 1px 12px 1px #00ffff;
-    height: 42px;
-    width: 140px;
-    font-family: 'Outfit', sans-serif;
-    font-weight: 800;
-    color: #0C113B;
-    
+  background-color: #00ffff;
+  border: none;
+  box-shadow: 1px 1px 12px 1px #00ffff;
+  height: 42px;
+  width: 140px;
+  font-family: "Outfit", sans-serif;
+  font-weight: 800;
+  color: #0c113b;
 }
-
-
-
-
-
-
-
-
-
 
 /*MAIN PAGINA 1*/
 
-
-
 .homePage {
-    width: 40%;
+  width: 40%;
 }
 
 #instructions p {
-width: 60%;
-margin-top: -10px;
+  width: 60%;
+  margin-top: -10px;
 }
-
 
 #instructions ul {
-    margin: 40px 0px 40px -20px ;
+  margin: 40px 0px 40px -20px;
 }
-
 
 label {
-    font-size: 12px;
-    font-weight: 600;
+  font-size: 12px;
+  font-weight: 600;
 }
 
-
-#proceed form, #proceed a{
-    display: inline;
+#proceed form,
+#proceed a {
+  display: inline;
 }
 #proceed {
-    margin-top: 100px;
+  margin-top: 100px;
 }
-
 
 #proceed .btn {
-    margin-left: 220px;
+  margin-left: 220px;
 }
-
-
 
 /* Stile del checkbox */
 input[type="checkbox"] {
-    display: none;
+  display: none;
 }
 
 input[type="checkbox"] + label {
-    position: relative;
-    padding-left: 30px; /* Regola la larghezza del checkbox */
-    cursor: pointer;
-    display: inline-block; /* Aggiunto per corretta visualizzazione del margine */
+  position: relative;
+  padding-left: 30px; /* Regola la larghezza del checkbox */
+  cursor: pointer;
+  display: inline-block; /* Aggiunto per corretta visualizzazione del margine */
 }
 
 input[type="checkbox"] + label::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 15px; /* Larghezza del perimetro bianco */
-    height: 15px; /* Altezza del perimetro bianco */
-    border: 1px solid #fff; /* Colore del perimetro bianco */
-    background-color: transparent; /* Sfondo trasparente */
-    box-sizing: border-box;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15px; /* Larghezza del perimetro bianco */
+  height: 15px; /* Altezza del perimetro bianco */
+  border: 1px solid #fff; /* Colore del perimetro bianco */
+  background-color: transparent; /* Sfondo trasparente */
+  box-sizing: border-box;
 }
 
 /* Stile del checkmark quando il checkbox è selezionato */
 input[type="checkbox"]:checked + label::before {
-    background-color: transparent; /* Mantieni lo sfondo trasparente quando il checkbox è selezionato */
-    border-color: white; /* Colore del perimetro del segno di spunta */
-    content: '\2713'; /* Codice Unicode del segno di spunta (checkmark) */
-    font-size: 12px; /* Dimensione del testo del segno di spunta */
-    text-align: center; /* Allineamento del testo al centro */
-    color: white; /* Colore del testo del segno di spunta */
-    display: inline-block; /* Per visualizzare correttamente il carattere */
-    line-height: 15px; /* Altezza del contenitore del carattere */
+  background-color: transparent; /* Mantieni lo sfondo trasparente quando il checkbox è selezionato */
+  border-color: white; /* Colore del perimetro del segno di spunta */
+  content: "\2713"; /* Codice Unicode del segno di spunta (checkmark) */
+  font-size: 12px; /* Dimensione del testo del segno di spunta */
+  text-align: center; /* Allineamento del testo al centro */
+  color: white; /* Colore del testo del segno di spunta */
+  display: inline-block; /* Per visualizzare correttamente il carattere */
+  line-height: 15px; /* Altezza del contenitore del carattere */
 }
 
-
-
-
-
-
-
-
-
+/* MAIN */
 
 /* MAIN PAGINA 4 */
 
-
-
-
-
-
 .rating {
-    font-size: 0;
+  font-size: 0;
+  margin: 30px 0px 70px 0px;
 }
 
 .star {
-    display: inline-block;
-    margin: 0 5px;
-    cursor: pointer;
+  display: inline-block;
+  margin: 0 5px;
+  cursor: pointer;
 }
 
 .star i {
-    font-size: 50px; /* Imposta la dimensione dell'icona stella */
-    color: #1E3050; /* Colore della stella non selezionata */
+  font-size: 40px; /* Imposta la dimensione dell'icona stella */
+  color: #1e3050; /* Colore della stella non selezionata */
 }
 
 .star.clicked i,
 .star:hover i {
-    color: #00FFFF; /* Colore della stella selezionata o evidenziata */
+  color: #00ffff; /* Colore della stella selezionata o evidenziata */
+}
+
+.pg4 {
+  font-size: 24px;
+  width: 34vw;
+  margin: 0 auto;
+}
+
+
+.comment {
+  margin: 30px;
+  height: 20px;
+  width: 630px;
+  border: none;
+  border-bottom: 1px solid #d20094; /* Puoi personalizzare il colore della linea qui */
+  outline: none;
+  padding-left: 30px; /* Rimuove il padding predefinito */
+  background-color: transparent; /* Rimuove lo sfondo predefinito */
+  color: #fff;
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+}
+
+
+#moreInfo {
+    margin-top: 20px;
 }
