--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -1,6 +1,6 @@
 /* GENERICO*/
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&family=Outfit:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&family=Outfit:wght@400;600;700;900&display=swap");
 
 html,
 body {
@@ -130,6 +130,12 @@ input[type="checkbox"]:checked + label::before {
 
 /* MAIN PAGINA 4 */
 
+.title {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+
 .rating {
   font-size: 0;
   margin: 30px 0px 70px 0px;
@@ -152,8 +158,8 @@ input[type="checkbox"]:checked + label::before {
 }
 
 .pg4 {
-  font-size: 24px;
-  width: 34vw;
+  font-size: 20px;
+  width: 35vw;
   margin: 0 auto;
 }
 
