--- a/pag2/Timer1/assets/css/PAG2_CSS.css
+++ b/pag2/Timer1/assets/css/PAG2_CSS.css
@@ -44,7 +44,7 @@ body {
     color: #00FFFF;
   }
   
-  .base-timer__path-remaining.red {
+  .base-timer__path-remaining.color3 {
     color: #00FFFF;
   }
   
