--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -183,3 +183,46 @@ input[type="checkbox"]:checked + label::before {
 #moreInfo {
     margin-top: 20px;
 }
+
+.base-timer {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  color: black;
+}
+
+.base-timer__svg {
+  transform: scaleX(1);
+}
+
+.base-timer__circle {
+  fill: none;
+  stroke: none;
+}
+
+.base-timer__path-elapsed {
+  stroke-width: 7px;
+  stroke: grey;
+}
+
+.base-timer__path-remaining {
+  stroke-width: 7px;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
+  fill-rule: nonzero;
+  stroke: currentColor;
+  color:#00FFFF;
+}
+
+.base-timer__label {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+}
