--- a/general/assets/css/style.css
+++ b/general/assets/css/style.css
@@ -138,6 +138,7 @@ input[type="checkbox"]:checked + label::before {
 
 #domanda {
   font-size:40px ;
+  margin: 80px;
 }
 
 #results {
@@ -145,7 +146,7 @@ input[type="checkbox"]:checked + label::before {
 }
 
 #risposte {
-  margin-top: 30px;
+  margin: 30px 150px;
   display: flex;
   flex-wrap: wrap;
 
@@ -237,7 +238,7 @@ input[type="checkbox"]:checked + label::before {
 /*TIMER*/
 #timer {
   width: 30%;
-  margin: -5rem 3rem 6rem 40rem;
+  margin: -5rem 6rem 1rem 50rem;
 
 }
 
@@ -346,3 +347,25 @@ input[type="checkbox"]:checked + label::before {
     margin-top: 20px;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+/*pie chart*/
+
+.chart-container {
+  width: 80%;
+  max-width: 600px;
+}
+
+.quiz-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
